--- a/atheneum/Base.lproj/Main.storyboard
+++ b/atheneum/Base.lproj/Main.storyboard
@@ -2,13 +2,12 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Bookshelf Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="BookshelfController" customModule="atheneum" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyBookShelfBoard" id="BYZ-38-t0r" customClass="BookshelfController" customModule="atheneum" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,8 +19,17 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BOy-gM-btM">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="iSf-Mc-bUE"/>
+                                </constraints>
                                 <items>
-                                    <navigationItem title="My bookshelf" id="Qk0-82-VAO"/>
+                                    <navigationItem title="My bookshelf" id="Qk0-82-VAO">
+                                        <barButtonItem key="rightBarButtonItem" title="Scan book" id="Mf5-an-JbG">
+                                            <connections>
+                                                <segue destination="dT5-Eu-4Nd" kind="show" id="3uj-t4-rws"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="uHv-6V-dIB">
@@ -30,13 +38,19 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YIg-jV-EYR">
                                         <rect key="frame" x="0.0" y="0.0" width="334" height="21"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You don't have any books in your bookshelf." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0b-qr-T2V">
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PFd-OJ-uCH">
                                                 <rect key="frame" x="0.0" y="0.0" width="334" height="21"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You don't have any books in your bookshelf." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0b-qr-T2V">
+                                                        <rect key="frame" x="0.0" y="0.0" width="334" height="21"/>
+                                                        <animations/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
                                                 <animations/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            </stackView>
                                         </subviews>
                                         <animations/>
                                     </stackView>
@@ -47,18 +61,37 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="BOy-gM-btM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ROA-Fy-wjp"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="uHv-6V-dIB" secondAttribute="trailing" constant="113" id="agK-IS-Yp9"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="BOy-gM-btM" secondAttribute="trailing" constant="-20" id="wcH-Hp-60o"/>
-                            <constraint firstItem="uHv-6V-dIB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="113" id="wt2-0j-DRJ"/>
-                            <constraint firstItem="uHv-6V-dIB" firstAttribute="top" secondItem="BOy-gM-btM" secondAttribute="bottom" constant="34" id="yPM-vJ-uZB"/>
-                            <constraint firstItem="BOy-gM-btM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ySh-t9-gEW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uHv-6V-dIB" secondAttribute="bottom" constant="481" id="07H-v5-uV2"/>
+                            <constraint firstItem="BOy-gM-btM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="1xd-do-cZH"/>
+                            <constraint firstItem="uHv-6V-dIB" firstAttribute="centerX" secondItem="BOy-gM-btM" secondAttribute="centerX" id="8lx-xa-CbI"/>
+                            <constraint firstItem="BOy-gM-btM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aen-yI-s8T"/>
+                            <constraint firstItem="uHv-6V-dIB" firstAttribute="top" secondItem="BOy-gM-btM" secondAttribute="bottom" constant="34" id="sdb-Y8-MpN"/>
+                            <constraint firstAttribute="trailing" secondItem="BOy-gM-btM" secondAttribute="trailing" id="v6i-eU-VNm"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="399" y="409"/>
+        </scene>
+        <!--Scan Controller-->
+        <scene sceneID="JuO-8e-vxM">
+            <objects>
+                <viewController storyboardIdentifier="ScanBoard" id="dT5-Eu-4Nd" customClass="ScanController" customModule="atheneum" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="000-pj-5It"/>
+                        <viewControllerLayoutGuide type="bottom" id="WI9-w0-XeF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KM3-y2-AD5">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j8h-77-DUJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1133" y="409"/>
         </scene>
     </scenes>
 </document>
